# ai-duckdb

./: .gitignore  README.md  WEB_APP_README.md  app.py  call_ai.py  call_gemini.py  database.py  doc.py  main.py  pyproject.toml  sample_products.json  sample_sales_data.csv
docs/: blog_article.md
static/js/: app.js
templates/: index.html
test/: nanobanana.py
