[project]
name = "ai-duckdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "flask>=3.1.2",
    "google-genai>=1.36.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
    "xlrd>=2.0.2",
]
